# workout_tg_bot

./: .env  .gitignore  pyproject.toml
bot/: bot.py
bot/containers/: factories.py  providers.py
bot/domain/dtos/: user.py
bot/domain/services/user/: base.py  web.py
bot/domain/services/workout/: base.py  web.py
bot/domain/use_cases/: base.py  user.py
bot/exceptions/: base.py  user.py  workout.py
bot/handlers/: start.py
bot/messages/: base.py  menu.py  start.py
bot/settings/: config.py
bot/states/: registration.py
