[tool.poetry]
name = "workout-tg-bot"
version = "0.1.0"
description = ""
authors = ["sergey936 <s.suslakov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
dishka = "^1.3.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 79
