[tool.poetry]
name = "workout-tg-bot"
version = "0.1.0"
description = ""
authors = ["sergey936 <s.suslakov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
dishka = "^1.3.0"
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-bugbear = "24.8.19"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.4.0"
pep8-naming = "^0.14.1"
flake8-commas = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 79
